--- a/css/style.css
+++ b/css/style.css
@@ -11323,11 +11323,15 @@ h5,
   .product {
     margin-bottom: 30px;
   }
+  .product .img-prod {
+    max-height: none !important;
+  }
 }
 .product .img-prod {
   position: relative;
   display: block;
   overflow: hidden;
+  max-height: 190px;
 }
 .product .img-prod .overlay {
   position: absolute;
@@ -11563,6 +11567,12 @@ h5,
 @media (max-width: 767.98px) {
   .product-details .form-group .icon {
     right: 10px;
+  }
+  .topper1 {
+    display: none !important;
+  }
+  .topper2 {
+    margin-top: 10px;
   }
 }
 .product-details .form-group .select-wrap {
